# php2py

./: .cruft.json  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  composer.json  pyproject.toml  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
src/php2py/: ast_utils.py  cli.py  constants.py  main.py  parser.py  php_ast.py  py_ast.py  translator.py
src/php2py/etc/: composer.json
src/php2py/translator/: __init__.py  base.py  exprs.py  scalars.py  stmts.py  translator.py  utils.py
tests/: conftest.py  test_assignments.py  test_classes.py  test_control_flow.py  test_functions.py  test_snippets.py  test_translator.py  test_whole_programs.py  util.py
tests/programs/: class.php  if.php  variables.php
tests/snippets/: class.py  switch.py  use.py
